--- a/viewer/package.json
+++ b/viewer/package.json
@@ -18,10 +18,12 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.65",
     "@electron-forge/maker-zip": "^6.0.0-beta.65",
     "electron": "^20.0.2",
+    "electron-log": "^4.4.8",
     "electron-reloader": "^1.2.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "uuid": "^8.3.2"
   },
   "config": {
     "forge": {
