--- a/viewer/package.json
+++ b/viewer/package.json
@@ -2,7 +2,7 @@
   "name": "clapped_audience",
   "productName": "拍手喝采デモ版v0.0.1",
   "version": "0.0.1",
-  "description": "オンラインイベントリアクションツールです",
+  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
