--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clapped-audience",
   "version": "0.0.2",
-  "description": "",
+  "description": "オンラインイベントリアクションツール",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
