--- a/viewer/package.json
+++ b/viewer/package.json
@@ -1,8 +1,8 @@
 {
   "name": "clapped_audience",
-  "productName": "拍手喝采デモ版v0.0.1",
+  "productName": "拍手喝采デモ版v0.0.3",
   "version": "0.0.1",
-  "description": "",
+  "description": "オンラインイベントリアクションツール発表者用アプリケーション",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
