--- a/static-site/package.json
+++ b/static-site/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "server",
+  "name": "static-site",
   "version": "0.1.0",
   "bin": {
-    "server": "bin/server.js"
+    "static-site": "bin/static-site.js"
   },
   "scripts": {
     "build": "tsc",
@@ -14,9 +14,9 @@
     "@types/jest": "^27.5.2",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
-    "aws-cdk": "2.39.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
+    "aws-cdk": "2.39.0",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
