--- a/viewer/package.json
+++ b/viewer/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "viewer",
-  "version": "1.0.0",
-  "description": "Viewer",
+  "name": "clapped_audience",
+  "productName": "拍手喝采デモ版v0.0.3",
+  "version": "0.0.1",
+  "description": "オンラインイベントリアクションツール発表者用アプリケーション",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "build": "electron-packager . --icon=assets/app_icon.icns --overwrite"
   },
-  "author": "Jane Doe",
+  "author": "takiguchi-yu",
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.65",
@@ -17,37 +20,16 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.65",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.65",
     "@electron-forge/maker-zip": "^6.0.0-beta.65",
+    "@electron-forge/publisher-github": "^6.0.0-beta.65",
     "electron": "^20.0.2",
+    "electron-packager": "^16.0.0",
     "electron-reloader": "^1.2.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "uuid": "^8.3.2"
   },
   "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "my_electron_app"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
+    "forge": "./forge.config.js"
   }
 }
