--- a/viewer/package.json
+++ b/viewer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clapped_audience",
-  "productName": "ClappedAudience",
-  "version": "1.0.0",
+  "productName": "拍手喝采v1.0.2",
+  "version": "1.0.2",
   "description": "オンラインイベントリアクションツール発表者用アプリケーション",
   "main": "main.js",
   "scripts": {
