--- a/viewer/package.json
+++ b/viewer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clapped_audience",
-  "productName": "拍手喝采v1.3.0",
-  "version": "1.3.0",
+  "productName": "拍手喝采v1.3.1",
+  "version": "1.3.1",
   "description": "オンラインイベントリアクションツール発表者用アプリケーション",
   "main": "main.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "electron-reloader": "^1.2.3"
   },
   "dependencies": {
+    "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
     "uuid": "^8.3.2"
   },
